Migrate de SB 3.2, Java 21